# heat-equation-hpc-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  io.yml  job_cpu.sh  job_gpu.sh  plotter.py
src/: heat_equation.hpp  main.cpp  mpi.hpp  mpi_decomposition.hpp
